# python-fastapi-baseline

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup.cfg
python_baseline/: __main__.py
python_baseline/api/v1/endpoints/: demo.py
python_baseline/core/: config.py
python_fastapi_baseline/: __main__.py
python_fastapi_baseline/api/: __init__.py
python_fastapi_baseline/api/v1/: api.py
stubs/uvicorn/: _types.pyi  main.pyi  subprocess.pyi
stubs/uvicorn/_impl/: asyncio.pyi
stubs/uvicorn/middleware/: asgi2.pyi  message_logger.pyi  proxy_headers.pyi  wsgi.pyi
stubs/uvicorn/protocols/: utils.pyi
stubs/uvicorn/protocols/http/: h11_impl.pyi
stubs/uvicorn/protocols/websockets/: auto.pyi  wsproto_impl.pyi
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  README.md  devfile.toml  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/stubs/uvicorn/: config.pyi  importer.pyi  logging.pyi
{{cookiecutter.project_slug}}/stubs/uvicorn/lifespan/: on.pyi
{{cookiecutter.project_slug}}/stubs/uvicorn/middleware/: debug.pyi
{{cookiecutter.project_slug}}/stubs/uvicorn/protocols/http/: auto.pyi  httptools_impl.pyi
{{cookiecutter.project_slug}}/stubs/uvicorn/protocols/websockets/: websockets_impl.pyi
{{cookiecutter.project_slug}}/stubs/uvicorn/supervisors/: __init__.pyi  basereload.pyi  multiprocess.pyi  statreload.pyi  watchgodreload.pyi
{{cookiecutter.project_slug}}/{{cookiecutter.project_root}}/: __main__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_root}}/core/: config.py
